--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,8 +1,154 @@
-.nav {
-  @media #{$info-phone} {
-
-  }
-  @media screen and (max-width: 767px){
-
-  }
+.header {
+    padding: 20px 170px;
+    @media #{$res800} {
+        padding: 50px;
+    }
+    a {
+        color: white;
+        font-weight: 400;
+        font-variant: petite-caps;
+    }
+    .logo {
+        @include font-size(30px);
+        font-weight: bold;
+    }
+    .show-menu-btn,
+    .hide-menu-btn {
+        cursor: pointer;
+        display: none;
+        i {
+            font-size: 30px;
+            color: white;
+        }
+        @media #{$res800} {
+            display: block;
+        }
+    }
+    .hide-menu-btn {
+        @media #{$res800} {
+            position: absolute;
+            top: 8%;
+            right: 7%
+        }
+    }
+    #chk {
+        position: absolute;
+        visibility: hidden;
+        z-index: -111;
+    }
+    #chk:checked~.header__menu {
+        right: 0;
+    }
+    .header__inner {
+        @include flex(center, space-between);
+    }
+    .header__menu--flex {
+        display: flex;
+        li {
+            list-style: none;
+        }
+    }
+    .header__menu {
+        margin: 0 0 0 35%;
+        @media #{$res800} {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            background: gray;
+            right: -100%;
+            top: 0;
+            text-align: center;
+            transition: 0.7s;
+            z-index: 2;
+        }
+        .header__menu-list {
+            height: 20px;
+            display: flex;
+            @media #{$res800} {
+                padding: 180px 0;
+                display: block;
+            }
+        }
+        .header__menu-link {
+            &:hover {
+                color: #FCE38A;
+                border-bottom: 3px solid;
+            }
+        }
+        .show-menu-btn:hover,
+        .hide-menu-btn:hover {
+            transition: 0.4s;
+        }
+        .header__menu-item {
+            &:nth-last-child(2) {
+                margin: 0 0 0 0;
+            }
+        }
+    }
+    .header__menu-item {
+        margin: 0 55px 0 0;
+        font-size: 15px;
+        list-style: none;
+        &:nth-last-child(1) {
+            margin: 0 0 0 0;
+        }
+        @media #{$res800} {
+            padding: 20px 0;
+            font-size: 25px;
+            line-height: normal;
+            margin: 0;
+        }
+        @media #{$res1350} {
+            &:nth-last-child(1) {
+                margin: 0 0 0 0;
+            }
+            margin: 0 30px 0 0;
+        }
+        @media #{$res950} {
+            &:nth-last-child(1) {
+                margin: 0 0 0 0;
+            }
+            margin: 0 15px 0 0;
+        }
+    }
+    .header__menu-icon {
+        height: 20px;
+        display: flex;
+        li {
+            padding: 0;
+            margin: 0 40px 0 5px;
+        }
+        @media #{$res800} {
+            display: flex;
+            justify-content: flex-end;
+            width: 100%;
+            margin: 0px 25px;
+            height: auto;
+        }
+        @media #{$res1024} {
+            margin: 0 20px;
+        }
+        @media #{$res1550} {
+            margin: 0 20px;
+        }
+        .header__menu-item {
+            @media #{$res800} {
+                margin: 0 20px;
+            }
+        }
+        button {
+            padding: 0;
+            background: transparent;
+            border: none;
+            color: white;
+            outline: none;
+        }
+    }
 }
+
+// .nav {
+//   @media #{$info-phone} {
+//   }
+//   @media screen and (max-width: 767px){
+//   }
+// }
