--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -208,6 +208,9 @@
                 max-width: 90%;
                 margin: 20px auto;
             }
+            @media #{$res800} {
+                padding: 20px;
+            }
             max-width: 280px;
             max-height: 360px;
             img {
