--- a/assets/scss/page/_banner.scss
+++ b/assets/scss/page/_banner.scss
@@ -23,6 +23,7 @@
                 font-weight: bold;
                 position: relative;
                 z-index: 1;
+                width: 680px;
             }
             .top--border-bottom {
                 padding: 0 0 36px 0;
@@ -35,6 +36,9 @@
                     border-bottom: 3px solid;
                     width: 50px;
                     margin: auto;
+                    @media #{$info-phone} {
+                        left: 43%;
+                    }
                     @media #{$info-phone-4} {
                         left: 39%;
                     }
