--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,25 +1,20 @@
 // Variables + Mixins + Functions
 @import "helpers/variables";
-
 // Always include variable 1st !
 @import "helpers/mixins";
-
 // Base
 @import "base/typography";
-
 // Vendors
 // Import jQuery lib, Bootstrap ... etc
-
 // Themes
 // If we have themes, import specific styles here
-
 // Layout
 @import "layout/common";
 @import "layout/header";
 @import "layout/main";
+@import "layout/what-we-do";
+@import "layout/feed-back";
 @import "layout/sidebar";
 @import "layout/footer";
-
-
 // Page specific styles
 @import "page/banner";
