--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -7520,13 +7520,13 @@ img {
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
-  margin: 50px 120px 100px 120px;
+  margin: 50px 0 100px 0;
   color: #9c9a9a;
 }
 
 @media only screen and (max-width: 600px) {
   .title-section p {
-    margin: 30px 120px 30px 120px;
+    margin: 30px 0 30px 0;
   }
 }
 
