update header footer

--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -207,6 +207,7 @@
             @media #{$res974} {
                 max-width: 90%;
                 margin: 20px auto;
+                padding: 0 20px 20px 20px;
             }
             @media #{$res800} {
                 padding: 20px;
