--- a/assets/scss/page/_banner.scss
+++ b/assets/scss/page/_banner.scss
@@ -5,6 +5,8 @@
     font-family: 'Montserrat', sans-serif;
     background-repeat: no-repeat;
     padding-top: 80px;
+    background-size: cover;
+    background-repeat: round;
     .banner__content {
         color: #fff;
         .banner__content__top {
