--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -134,10 +134,10 @@
         font-style: normal;
         font-weight: 400;
         font-size: 15px;
-        margin: 50px 120px 100px 120px;
+        margin: 50px 0 100px 0;
         color: #9c9a9a;
         @media #{$res600} {
-            margin: 30px 120px 30px 120px;
+            margin: 30px 0 30px 0;
         }
     }
 }
