--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -7542,7 +7542,11 @@ img {
 }
 
 .say .say__content {
-  margin: 30px 0;
+  max-width: 1200px;
+  margin: 40px auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .say .say__content .say__content__item {
@@ -7564,31 +7568,26 @@ img {
   }
 }
 
+@media only screen and (max-width: 767px) {
+  .say .say__content .say__content__item {
+    display: block;
+  }
+}
+
 .say .say__content .say__content__item .item__img {
-  width: 80%;
+  width: 50%;
 }
 
 @media only screen and (max-width: 1000px) {
   .say .say__content .say__content__item .item__img {
-    width: 100%;
+    width: 80%;
   }
 }
 
 @media only screen and (max-width: 767px) {
   .say .say__content .say__content__item .item__img {
-    width: 30%;
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  .say .say__content .say__content__item .item__img {
-    width: 60%;
-  }
-}
-
-@media only screen and (max-width: 320px) {
-  .say .say__content .say__content__item .item__img {
-    width: 100%;
+    width: 50%;
+    margin: auto;
   }
 }
 
