--- a/assets/scss/helpers/_variables.scss
+++ b/assets/scss/helpers/_variables.scss
@@ -20,7 +20,7 @@ $color-danger: #f54747;
 $whiteish: #f2f2f2;
 $pink: #E96F92;
 $purple: #75517D;
-$green: #54fad4;
+$green: #95e1d3;
 //options
 $duration: 0.8s;
 $ease-in-out: cubic-bezier(0.445, 0.050, 0.550, 0.950);
