--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -7530,4 +7530,166 @@ img {
     margin: 30px 0 30px 0;
   }
 }
+
+.blog {
+  margin: 60px 0 40px 0;
+}
+
+.blog .blog__content {
+  max-width: 1200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 40px auto;
+}
+
+@media only screen and (max-width: 767px) {
+  .blog .blog__content {
+    display: block;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.blog .blog__content .blog__content__item {
+  width: calc(1200px/3);
+  padding: 15px;
+}
+
+@media only screen and (max-width: 767px) {
+  .blog .blog__content .blog__content__item {
+    margin: auto;
+    padding: 0;
+    max-width: 90%;
+  }
+}
+
+.blog .blog__content .blog__content__item .item__img {
+  position: relative;
+  text-align: center;
+  margin: 20px 0;
+}
+
+@media only screen and (max-width: 767px) {
+  .blog .blog__content .blog__content__item .item__img {
+    margin: 10px 0;
+  }
+}
+
+.blog .blog__content .blog__content__item .item__img .item__img-abs {
+  position: absolute;
+  z-index: 2;
+  bottom: 4%;
+  left: -3%;
+  background-color: #95e1d3;
+  width: 60px;
+  height: 70px;
+  color: #fff;
+  padding: 8px 0;
+}
+
+@media only screen and (max-width: 1160px) {
+  .blog .blog__content .blog__content__item .item__img .item__img-abs {
+    width: 50px;
+    height: 60px;
+    padding: 7px 0;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .blog .blog__content .blog__content__item .item__img .item__img-abs {
+    width: 40px;
+    height: 50px;
+    padding: 5px 0;
+  }
+}
+
+.blog .blog__content .blog__content__item .item__img .item__img-abs span {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 25px;
+  font-weight: bold;
+}
+
+@media only screen and (max-width: 1160px) {
+  .blog .blog__content .blog__content__item .item__img .item__img-abs span {
+    font-size: 22px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .blog .blog__content .blog__content__item .item__img .item__img-abs span {
+    font-size: 20px;
+  }
+}
+
+.blog .blog__content .blog__content__item .item__img .item__img-abs p {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  font-style: italic;
+  font-size: 13px;
+  line-height: 1;
+}
+
+@media only screen and (max-width: 900px) {
+  .blog .blog__content .blog__content__item .item__img .item__img-abs p {
+    font-size: 11px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .blog .blog__content .blog__content__item .item__img .item__img-abs p {
+    font-size: 9px;
+  }
+}
+
+.blog .blog__content .blog__content__item .item__text p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  color: #9c9a9a;
+  margin: 20px 0;
+}
+
+@media only screen and (max-width: 767px) {
+  .blog .blog__content .blog__content__item .item__text p {
+    margin: 5px 0;
+  }
+}
+
+.blog .blog__content .blog__content__item .item__text a {
+  color: #9c9a9a;
+  padding: 15px 0;
+  margin-right: 15px;
+  outline: none;
+  text-decoration: none;
+}
+
+.blog .blog__content .blog__content__item .item__text a:hover {
+  color: #000;
+}
+
+.blog .blog__content .blog__content__item .item__text > span {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+@media only screen and (max-width: 767px) {
+  .blog .blog__content .blog__content__item .item__text > span {
+    font-size: 13px;
+  }
+}
+
+.blog .blog__content .blog__content__item .item__text .item__text__icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-top: 1px solid #cccccc;
+}
+
+.blog .blog__content .blog__content__item .item__text .item__text__icon i {
+  color: #95e1d3;
+  margin-right: 5px;
+}
 /*# sourceMappingURL=main.css.map */
