--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -17,6 +17,7 @@
 @import "layout/common";
 @import "layout/header";
 @import "layout/main";
+@import "layout/blog";
 @import "layout/sidebar";
 @import "layout/footer";
 
