--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -1,4 +1,3 @@
-
 .search {
     width: 100%;
     @include flex(center, center);
@@ -106,6 +105,8 @@
 
 .title-section {
     max-width: 1200px;
+    text-align: center;
+    margin: auto;
     span {
         font-family: 'Kaushan Script', cursive;
         font-size: 24px;
